# CNT-MD

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt  contributors.txt
data/real/gundem2015/: A10-cleaned.samples  A10-resulting-starts-ends.segments-updated  A22-cleaned.samples  A22-resulting-starts-ends.segments-updated  A29-cleaned.samples  A29-resulting-starts-ends.segments-updated  A31-cleaned.samples  A31-resulting-starts-ends.segments-updated
data/sim/1chr-input/: sim_c1_k4_n20_u2_s41_del02_m10_ss42.samples  sim_c1_k4_n20_u2_s41_del02_m2_ss42.samples  sim_c1_k4_n20_u2_s41_del02_m5_ss42.samples  sim_c1_k4_n20_u2_s42_del02_m10_ss42.samples  sim_c1_k4_n20_u2_s42_del02_m2_ss42.samples  sim_c1_k4_n20_u2_s42_del02_m5_ss42.samples  sim_c1_k4_n20_u2_s43_del02_m10_ss42.samples  sim_c1_k4_n20_u2_s43_del02_m2_ss42.samples  sim_c1_k4_n20_u2_s43_del02_m5_ss42.samples  sim_c1_k6_n20_u2_s41_del02_m10_ss42.samples  sim_c1_k6_n20_u2_s41_del02_m2_ss42.samples  sim_c1_k6_n20_u2_s41_del02_m5_ss42.samples  sim_c1_k6_n20_u2_s42_del02_m10_ss42.samples  sim_c1_k6_n20_u2_s42_del02_m2_ss42.samples  sim_c1_k6_n20_u2_s42_del02_m5_ss42.samples  sim_c1_k6_n20_u2_s43_del02_m10_ss42.samples  sim_c1_k6_n20_u2_s43_del02_m2_ss42.samples  sim_c1_k6_n20_u2_s43_del02_m5_ss42.samples  sim_c1_k8_n20_u2_s41_del02_m10_ss42.samples  sim_c1_k8_n20_u2_s41_del02_m2_ss42.samples  sim_c1_k8_n20_u2_s41_del02_m5_ss42.samples  sim_c1_k8_n20_u2_s42_del02_m10_ss42.samples  sim_c1_k8_n20_u2_s42_del02_m2_ss42.samples  sim_c1_k8_n20_u2_s42_del02_m5_ss42.samples  sim_c1_k8_n20_u2_s43_del02_m10_ss42.samples  sim_c1_k8_n20_u2_s43_del02_m2_ss42.samples  sim_c1_k8_n20_u2_s43_del02_m5_ss42.samples
data/sim/1chr-true/: sim_c1_k4_n20_u2_s41_del02_m10_ss42.true  sim_c1_k4_n20_u2_s41_del02_m2_ss42.true  sim_c1_k4_n20_u2_s41_del02_m5_ss42.true  sim_c1_k4_n20_u2_s42_del02_m10_ss42.true  sim_c1_k4_n20_u2_s42_del02_m2_ss42.true  sim_c1_k4_n20_u2_s42_del02_m5_ss42.true  sim_c1_k4_n20_u2_s43_del02_m10_ss42.true  sim_c1_k4_n20_u2_s43_del02_m2_ss42.true  sim_c1_k4_n20_u2_s43_del02_m5_ss42.true  sim_c1_k6_n20_u2_s41_del02_m10_ss42.true  sim_c1_k6_n20_u2_s41_del02_m2_ss42.true  sim_c1_k6_n20_u2_s41_del02_m5_ss42.true  sim_c1_k6_n20_u2_s42_del02_m10_ss42.true  sim_c1_k6_n20_u2_s42_del02_m2_ss42.true  sim_c1_k6_n20_u2_s42_del02_m5_ss42.true  sim_c1_k6_n20_u2_s43_del02_m10_ss42.true  sim_c1_k6_n20_u2_s43_del02_m2_ss42.true  sim_c1_k6_n20_u2_s43_del02_m5_ss42.true  sim_c1_k8_n20_u2_s41_del02_m10_ss42.true  sim_c1_k8_n20_u2_s41_del02_m2_ss42.true  sim_c1_k8_n20_u2_s41_del02_m5_ss42.true  sim_c1_k8_n20_u2_s42_del02_m10_ss42.true  sim_c1_k8_n20_u2_s42_del02_m2_ss42.true  sim_c1_k8_n20_u2_s42_del02_m5_ss42.true  sim_c1_k8_n20_u2_s43_del02_m10_ss42.true  sim_c1_k8_n20_u2_s43_del02_m2_ss42.true  sim_c1_k8_n20_u2_s43_del02_m5_ss42.true
data/sim/4chr-input/: sim_c4_k4_n20202020_u2222_s41_del02_m10_ss42.samples  sim_c4_k4_n20202020_u2222_s41_del02_m2_ss42.samples  sim_c4_k4_n20202020_u2222_s41_del02_m5_ss42.samples  sim_c4_k4_n20202020_u2222_s42_del02_m10_ss42.samples  sim_c4_k4_n20202020_u2222_s42_del02_m2_ss42.samples  sim_c4_k4_n20202020_u2222_s42_del02_m5_ss42.samples  sim_c4_k4_n20202020_u2222_s43_del02_m10_ss42.samples  sim_c4_k4_n20202020_u2222_s43_del02_m2_ss42.samples  sim_c4_k4_n20202020_u2222_s43_del02_m5_ss42.samples  sim_c4_k6_n20202020_u2222_s41_del02_m10_ss42.samples  sim_c4_k6_n20202020_u2222_s41_del02_m2_ss42.samples  sim_c4_k6_n20202020_u2222_s41_del02_m5_ss42.samples  sim_c4_k6_n20202020_u2222_s42_del02_m10_ss42.samples  sim_c4_k6_n20202020_u2222_s42_del02_m2_ss42.samples  sim_c4_k6_n20202020_u2222_s42_del02_m5_ss42.samples  sim_c4_k6_n20202020_u2222_s43_del02_m10_ss42.samples  sim_c4_k6_n20202020_u2222_s43_del02_m2_ss42.samples  sim_c4_k6_n20202020_u2222_s43_del02_m5_ss42.samples  sim_c4_k8_n20202020_u2222_s41_del02_m10_ss42.samples  sim_c4_k8_n20202020_u2222_s41_del02_m2_ss42.samples  sim_c4_k8_n20202020_u2222_s41_del02_m5_ss42.samples  sim_c4_k8_n20202020_u2222_s42_del02_m10_ss42.samples  sim_c4_k8_n20202020_u2222_s42_del02_m2_ss42.samples  sim_c4_k8_n20202020_u2222_s42_del02_m5_ss42.samples  sim_c4_k8_n20202020_u2222_s43_del02_m10_ss42.samples  sim_c4_k8_n20202020_u2222_s43_del02_m2_ss42.samples  sim_c4_k8_n20202020_u2222_s43_del02_m5_ss42.samples
data/sim/4chr-true/: sim_c4_k4_n20202020_u2222_s41_del02_m10_ss42.true  sim_c4_k4_n20202020_u2222_s41_del02_m2_ss42.true  sim_c4_k4_n20202020_u2222_s41_del02_m5_ss42.true  sim_c4_k4_n20202020_u2222_s42_del02_m10_ss42.true  sim_c4_k4_n20202020_u2222_s42_del02_m2_ss42.true  sim_c4_k4_n20202020_u2222_s42_del02_m5_ss42.true  sim_c4_k4_n20202020_u2222_s43_del02_m10_ss42.true  sim_c4_k4_n20202020_u2222_s43_del02_m2_ss42.true  sim_c4_k4_n20202020_u2222_s43_del02_m5_ss42.true  sim_c4_k6_n20202020_u2222_s41_del02_m10_ss42.true  sim_c4_k6_n20202020_u2222_s41_del02_m2_ss42.true  sim_c4_k6_n20202020_u2222_s41_del02_m5_ss42.true  sim_c4_k6_n20202020_u2222_s42_del02_m10_ss42.true  sim_c4_k6_n20202020_u2222_s42_del02_m2_ss42.true  sim_c4_k6_n20202020_u2222_s42_del02_m5_ss42.true  sim_c4_k6_n20202020_u2222_s43_del02_m10_ss42.true  sim_c4_k6_n20202020_u2222_s43_del02_m2_ss42.true  sim_c4_k6_n20202020_u2222_s43_del02_m5_ss42.true  sim_c4_k8_n20202020_u2222_s41_del02_m10_ss42.true  sim_c4_k8_n20202020_u2222_s41_del02_m2_ss42.true  sim_c4_k8_n20202020_u2222_s41_del02_m5_ss42.true  sim_c4_k8_n20202020_u2222_s42_del02_m10_ss42.true  sim_c4_k8_n20202020_u2222_s42_del02_m2_ss42.true  (+4 more)
data/test/: log2ratios.tsv
src/: basecarchitect.cpp  basecarchitect.h  basic_types.cpp  basic_types.h  carchitect.cpp  carchitect.h  compare.cpp  comparison.cpp  comparison.h  copynumbertree.cpp  copynumbertree.h  fmcsolution.cpp  fmcsolution.h  inputinstance.cpp  inputinstance.h  manager.cpp  manager.h  marchitect.cpp  marchitect.h  mixcnp.cpp  refiner.cpp  refiner.h  triplet.cpp  tripletarchitect.cpp  tripletarchitect.h  visualize.cpp  worker.cpp  worker.h
test/: basic_check.cpp  basic_check.h  check_carchitect.cpp  check_manager.cpp  check_marchitect.cpp  check_worker.cpp
utils/: make_input.py
(+54 files in other folders)
